Changelog
=========

1.0.2 - unreleased
------------------

* Added zh_TW translation.
  [marr, davisagli]

1.0.1 - 2011-09-24
------------------

* Support importing the ``add_view_expr`` property of the FTI via GenericSetup.
  This closes http://code.google.com/p/dexterity/issues/detail?id=192
  [davisagli]

* Make it possible to use DefaultAddForm without a form wrapper.
  [davisagli]

* Make sure the Subject accessor returns an encoded bytestring as expected for
  CMF-style accessors. This fixes
  http://code.google.com/p/dexterity/issues/detail?id=197
  [davisagli]

* Added pt_BR translation.
  [rafaelbco, davisagli]

1.0 - 2011-05-20
----------------

* Make sure the Title and Description accessors handle a value of None.
  [davisagli]

* Make sure the Title() accessor for Dexterity content returns an encoded
  bytestring as expected for CMF-style accessors.
  [davisagli]

1.0rc1 - 2011-04-30
-------------------

* Look up additional schemata by adapting to IBehaviorAssignable in cases
  where a Dexterity instance is available. (The list of behaviors in the
  FTI is still consulted for add forms.)
  [maurits]

* Explicitly load CMFCore ZCML.
  [davisagli]

* Add ids to group fieldsets.
  [elro]

* Do a deep copy instead of shallow when assigning field defaults. Content
  generated via script wound up with linked list (and other
  AbstractCollection) fields.
  [cah190, esteele]

* Make setDescription coerce to unicode in the same way as setTitle.
  [elro]

* Change the FTI default to enable dynamic view.
  [elro]

* Setup folder permissions in the same way as Archetypes so copy / paste /
  rename work consistently with the rest of Plone.
  [elro]

* Make sure the typesUseViewActionInListings property is respected when
  redirecting after edit.
  [elro, davisagli]

* Fix #145: UnicodeDecodeError After renaming item from @@folder_contents
  [toutpt]

1.0b7 - 2011-02-11
------------------

* Add adapter for plone.rfc822.interfaces.IPrimaryFieldInfo.
  [elro]
